project2/tests/reject/0-inequality-bad.cc
int main () {
    bool a = 3 != 4;
    bool b = true != false;
    bool c = 3.0 != 4;
    bool d = 4 != 3.0;

    int a = 3 != false;
    int y = 4.0 != true; 
}